added footer and added privacy policy and term&condition

--- a/Insurance_01.html
+++ b/Insurance_01.html
@@ -347,7 +347,8 @@
                 </div>
                 <h3 class="breadcrumb__title mb-20">Our Services</h3>
               </div>
-            </div>s
+            </div>
+            s
           </div>
         </div>
       </div>
@@ -867,8 +868,10 @@
                     <div class="footer__social">
                       <ul>
                         <li>
-                          <a href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"><i
-                              class="fa-brands fa-instagram"></i></a>
+                          <a
+                            href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+                            ><i class="fa-brands fa-instagram"></i
+                          ></a>
                         </li>
                       </ul>
                     </div>
@@ -876,7 +879,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
+            <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-2 pb-30">
                 <h4 class="footer__widget-title footer__widget-title-2">
                   Contact
@@ -903,7 +906,31 @@
                       <span>
                         <i class="fa-solid fa-clock"></i>
                       </span>
-                      <a href="">Mon - Fri: 9:00 am - 5:00 pm Saturdey, Sunday: closed</a>
+                      <a href=""
+                        >Mon - Fri: 9:00 am - 5:00 pm Saturdey, Sunday:
+                        closed</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-xxl-3 col-lg-8 col-md-6 col-sm-6">
+              <div class="footer__widget footer__widget-2 pb-30">
+                <h4 class="footer__widget-title footer__widget-title-2">
+                  Useful Links
+                </h4>
+                <div class="footer__contact-info tp-footer__icon-space">
+                  <ul>
+                    <li>
+                      <a target="_blank" href="/terms-and-conditions.html"
+                        >Terms & Conditions</a
+                      >
+                    </li>
+                    <li>
+                      <a target="_blank" href="/privacy-policy.html"
+                        >Privacy Policy</a
+                      >
                     </li>
                   </ul>
                 </div>
