--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>West Consult Inc - Contact Us / Reliable Safety Services for the Trucking Industry</title>
+    <title>
+      West Consult Inc - Contact Us / Reliable Safety Services for the Trucking
+      Industry
+    </title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -213,9 +216,9 @@
                           </li>
                           <li>
                             <a class="active" href="contact.html">Contact</a>
-                          <li><a href="fields.html">Forms</a></li>
-
                           </li>
+
+                          <li><a href="fields.html">Forms</a></li>
                         </ul>
                       </nav>
                     </div>
@@ -455,16 +458,10 @@
                   <div class="icon">
                     <ul>
                       <li>
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                        <a
+                          href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+                          ><i class="fa-brands fa-instagram"></i
+                        ></a>
                       </li>
                     </ul>
                   </div>
@@ -522,8 +519,10 @@
                     <div class="footer__social">
                       <ul>
                         <li>
-                          <a href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"><i
-                              class="fa-brands fa-instagram"></i></a>
+                          <a
+                            href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+                            ><i class="fa-brands fa-instagram"></i
+                          ></a>
                         </li>
                       </ul>
                     </div>
@@ -531,7 +530,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
+            <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-2 pb-30">
                 <h4 class="footer__widget-title footer__widget-title-2">
                   Contact
@@ -558,7 +557,31 @@
                       <span>
                         <i class="fa-solid fa-clock"></i>
                       </span>
-                      <a href="">Mon - Fri: 9:00 am - 5:00 pm Saturdey, Sunday: closed</a>
+                      <a href=""
+                        >Mon - Fri: 9:00 am - 5:00 pm Saturdey, Sunday:
+                        closed</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-xxl-3 col-lg-8 col-md-6 col-sm-6">
+              <div class="footer__widget footer__widget-2 pb-30">
+                <h4 class="footer__widget-title footer__widget-title-2">
+                  Useful Links
+                </h4>
+                <div class="footer__contact-info tp-footer__icon-space">
+                  <ul>
+                    <li>
+                      <a target="_blank" href="/terms-and-conditions.html"
+                        >Terms & Conditions</a
+                      >
+                    </li>
+                    <li>
+                      <a target="_blank" href="/privacy-policy.html"
+                        >Privacy Policy</a
+                      >
                     </li>
                   </ul>
                 </div>
@@ -573,10 +596,7 @@
             <div class="row">
               <div class="col-xxl-12">
                 <div class="footer__copyright text-center">
-                  <p>
-                    © 2025 West Consult Inc. All Rights Reserved 
-                    
-                  </p>
+                  <p>© 2025 West Consult Inc. All Rights Reserved</p>
                 </div>
               </div>
             </div>
