--- a/faqs.html
+++ b/faqs.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>West Consult Inc - FAQs / Reliable Safety Services for the Trucking Industry</title>
+    <title>
+      West Consult Inc - FAQs / Reliable Safety Services for the Trucking
+      Industry
+    </title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -224,8 +227,8 @@
                   <div class="tp-header__right d-flex align-items-center">
                     <div class="tp-header-search search-open-btn">
                       <a href="javascript:void(0);">
-                        <i class="fa-regular fa-magnifying-glass"></i
-                      ></a>
+                        <!-- <i class="fa-regular fa-magnifying-glass"></i> -->
+                      </a>
                     </div>
                     <div class="tp-header__contact-number">
                       <div class="sm-clist__icon">
@@ -851,8 +854,10 @@
                     <div class="footer__social">
                       <ul>
                         <li>
-                          <a href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"><i
-                              class="fa-brands fa-instagram"></i></a>
+                          <a
+                            href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+                            ><i class="fa-brands fa-instagram"></i
+                          ></a>
                         </li>
                       </ul>
                     </div>
@@ -860,7 +865,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
+            <div class="col-xxl-6 col-lg-8 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-2 pb-30">
                 <h4 class="footer__widget-title footer__widget-title-2">
                   Contact
@@ -888,7 +893,29 @@
                         <i class="fa-solid fa-clock"></i>
                       </span>
                       <a href="contact.html"
-                        >Mon - Fri: 9:00 am - 5:00 pm Saturday, Sunday: closed</a
+                        >Mon - Fri: 9:00 am - 5:00 pm Saturday, Sunday:
+                        closed</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-xxl-3 col-lg-8 col-md-6 col-sm-6">
+              <div class="footer__widget footer__widget-2 pb-30">
+                <h4 class="footer__widget-title footer__widget-title-2">
+                  Useful Links
+                </h4>
+                <div class="footer__contact-info tp-footer__icon-space">
+                  <ul>
+                    <li>
+                      <a target="_blank" href="/terms-and-conditions.html"
+                        >Terms & Conditions</a
+                      >
+                    </li>
+                    <li>
+                      <a target="_blank" href="/privacy-policy.html"
+                        >Privacy Policy</a
                       >
                     </li>
                   </ul>
@@ -904,10 +931,7 @@
             <div class="row">
               <div class="col-xxl-12">
                 <div class="footer__copyright text-center">
-                  <p>
-                    © 2025 West Consult Inc. All Rights Reserved 
-                    
-                  </p>
+                  <p>© 2025 West Consult Inc. All Rights Reserved</p>
                 </div>
               </div>
             </div>
