--- a/fields.html
+++ b/fields.html
@@ -707,7 +707,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
+            <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-2 pb-30">
                 <h4 class="footer__widget-title footer__widget-title-2">
                   Contact
@@ -737,6 +737,27 @@
                       <a href="contact.html"
                         >Mon - Fri: 9:00 am - 5:00 pm Saturday, Sunday:
                         closed</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-xxl-3 col-lg-8 col-md-6 col-sm-6">
+              <div class="footer__widget footer__widget-2 pb-30">
+                <h4 class="footer__widget-title footer__widget-title-2">
+                  Useful Links
+                </h4>
+                <div class="footer__contact-info tp-footer__icon-space">
+                  <ul>
+                    <li>
+                      <a target="_blank" href="/terms-and-conditions.html"
+                        >Terms & Conditions</a
+                      >
+                    </li>
+                    <li>
+                      <a target="_blank" href="/privacy-policy.html"
+                        >Privacy Policy</a
                       >
                     </li>
                   </ul>
