--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>West Consult Inc - Terms & Conditions</title>
+    <title>
+      West Consult Inc - Error / Reliable Safety Services for the Trucking
+      Industry
+    </title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Place favicon.ico in the root directory -->
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="assets/img/logo/favicon.png"
     />
 
+    <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/meanmenu.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
@@ -27,7 +32,461 @@
   </head>
 
   <body>
-    <h1>Terms & Conditions</h1>
+    <!--[if lte IE 9]>
+      <p class="browserupgrade">
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
+        your experience and security.
+      </p>
+    <![endif]-->
+
+    <!-- pre loader area start -->
+    <div id="loading">
+      <div id="loading-center">
+        <div id="loading-center-absolute">
+          <div class="object" id="object_one"></div>
+          <div class="object" id="object_two"></div>
+          <div class="object" id="object_three"></div>
+          <div class="object" id="object_four"></div>
+        </div>
+      </div>
+    </div>
+    <!-- pre loader area end -->
+
+    <!-- back to top start -->
+    <div class="back-to-top-wrapper">
+      <button id="back_to_top" type="button" class="back-to-top-btn">
+        <svg
+          width="12"
+          height="7"
+          viewBox="0 0 12 7"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M11 6L6 1L1 6"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </button>
+    </div>
+    <!-- back to top end -->
+    <!-- search popup start -->
+    <div class="search__popup z-index-8">
+      <div class="container">
+        <div class="row">
+          <div class="col-xxl-12">
+            <div class="search__wrapper">
+              <div
+                class="search__top d-flex justify-content-between align-items-center"
+              >
+                <div class="search__logo">
+                  <a href="index.html">
+                    <img src="assets/img/logo/logo.png" alt="logo" />
+                  </a>
+                </div>
+                <div class="search__close">
+                  <button
+                    type="button"
+                    class="search__close-btn search-close-btn"
+                  >
+                    <svg
+                      width="18"
+                      height="18"
+                      viewBox="0 0 18 18"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M17 1L1 17"
+                        stroke="currentColor"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M1 1L17 17"
+                        stroke="currentColor"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+              <div class="search__form">
+                <form action="#">
+                  <div class="search__input">
+                    <input
+                      class="search-input-field"
+                      type="text"
+                      placeholder="Type here to search..."
+                    />
+                    <span class="search-focus-border"></span>
+                    <button type="submit">
+                      <svg
+                        width="20"
+                        height="20"
+                        viewBox="0 0 20 20"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M9.55 18.1C14.272 18.1 18.1 14.272 18.1 9.55C18.1 4.82797 14.272 1 9.55 1C4.82797 1 1 4.82797 1 9.55C1 14.272 4.82797 18.1 9.55 18.1Z"
+                          stroke="currentColor"
+                          stroke-width="1.5"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                        <path
+                          d="M19.0002 19.0002L17.2002 17.2002"
+                          stroke="currentColor"
+                          stroke-width="1.5"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                      </svg>
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="search-popup-overlay"></div>
+    <!-- search popup end -->
+    <!-- header area start -->
+    <header class="main-header d-none d-lg-block">
+      <div class="tp-header">
+        <div id="header-sticky" class="tp-header__wrapper-inner">
+          <div class="tp-header__logo grey-bg-1">
+            <a href="index.html"
+              ><img src="assets/img/logo/logo-black.png" alt=""
+            /></a>
+          </div>
+          <div class="tp-header__main-header">
+            <div class="tp-header__top grey-bg-2">
+              <div class="tp-header__top-left text-left">
+                <p class="tp-header-top-left-text white-text">
+                  WEST CONSULT INC
+                </p>
+              </div>
+              <div class="tp-header__top-right text-end white-text">
+                <div class="tp-location mr-30">
+                  <a
+                    href="https://www.google.com.co/maps/place/890+N+State+St,+Elgin,+IL+60123,+США/@42.0554352,-88.2985164,17z/data=!3m1!4b1!4m6!3m5!1s0x880f056ff4b76fe9:0x846ef8c3930b5206!8m2!3d42.0554352!4d-88.2959415!16s%2Fg%2F11cp7ym2dw?entry=ttu&g_ep=EgoyMDI1MDMxNy4wIKXMDSoASAFQAw%3D%3D"
+                    target="_blank"
+                  >
+                    <i class="fa-sharp fa-solid fa-location-dot"></i> 66
+                    Broklyne Golden Street, USA</a
+                  >
+                </div>
+                <div class="envelope">
+                  <a href="mailto:safety.westconsult@gmail.com"
+                    ><i class="fa-solid fa-envelope"></i>
+                    safety.westconsult@gmail.com</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="tp-main-menu">
+              <div
+                class="tp-header__bottom d-flex align-items-center justify-content-between"
+              >
+                <div class="main-menu">
+                  <div class="tp-header__wrapper-inner">
+                    <div class="tp-header__menu text-center">
+                      <nav id="mobile-menu">
+                        <ul>
+                          <li class="has-dropdown">
+                            <a href="index.html">Home</a>
+                          </li>
+                          <li>
+                            <a href="Insurance_01.html">Our services</a>
+                          </li>
+                          <li>
+                            <a href="Insurance_01.html">About Us</a>
+                          </li>
+                          <li><a href="contact.html">Contact</a></li>
+                          <li><a href="fields.html">Forms</a></li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="tp-header__right-box d-flex justify-content-end align-items-center"
+                >
+                  <div class="tp-header__right d-flex align-items-center">
+                    <div class="tp-header-search search-open-btn">
+                      <a href="javascript:void(0);">
+                        <i class="fa-regular fa-magnifying-glass"></i
+                      ></a>
+                    </div>
+                    <div class="tp-header__contact-number">
+                      <div class="sm-clist__icon">
+                        <i class="flaticon-telephone"></i>
+                      </div>
+                      <div class="sm-clist__text text-start ml-15 mr-25">
+                        <span>Call Us Anytime</span>
+                        <a href="tel:+18723340670">+1 (872) 334-0670 </a>
+                      </div>
+                    </div>
+                    <div class="tp-header-btn">
+                      <a class="tp-btn" href="contact.html">Contact Us</a>
+                    </div>
+                  </div>
+                  <div class="sidebar__menu">
+                    <a class="tp-menu-bar text-black" href="#"
+                      ><i class="fa-solid fa-bars"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="mobile-header d-lg-none">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-6">
+            <div class="mobile__logo">
+              <a href="index.html"
+                ><img src="assets/img/logo/logo-black.png" alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="mobile__menu text-end">
+              <a class="tp-menu-bar" href="javascript:void(0)"
+                ><i class="fa-solid fa-bars"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- header area end -->
+    <!-- tp-offcanvus-area-start -->
+    <div class="tpoffcanvas-area">
+      <div class="offcanvas__wrapper">
+        <div class="tpoffcanvas">
+          <div class="tpoffcanvas__close-btn">
+            <button class="close-btn"><i class="fal fa-times"></i></button>
+          </div>
+          <div class="tpoffcanvas__logo">
+            <a href="index.html">
+              <img src="assets/img/logo/logo-black.png" alt="" />
+            </a>
+          </div>
+          <div class="mobile-menu"></div>
+          <div class="tpoffcanvas__contact">
+            <h4 class="tpoffcanvas__title">Contacts</h4>
+            <div class="tpoffcanvas__contact-content d-flex">
+              <div class="tpoffcanvas__contact-content-icon">
+                <i class="fa-sharp fa-solid fa-location-dot"></i>
+              </div>
+              <div class="tpoffcanvas__contact-content-content">
+                <a
+                  href="https://www.google.com/maps/search/86+Road+Broklyn+Street,+600+New+York,+USA/@40.6897806,-74.0278086,12z/data=!3m1!4b1"
+                  >86 Road Broklyn Street, 600
+                </a>
+              </div>
+            </div>
+            <div class="tpoffcanvas__contact-content d-flex">
+              <div class="tpoffcanvas__contact-content-icon">
+                <i class="fa-solid fa-envelope"></i>
+              </div>
+              <div class="tpoffcanvas__contact-content-content">
+                <a href="mailto:safety.westconsult@gmail.com">
+                  safety.westconsult@gmail.com
+                </a>
+              </div>
+            </div>
+            <div class="tpoffcanvas__contact-content d-flex">
+              <div class="tpoffcanvas__contact-content-icon">
+                <i class="fa-solid fa-phone"></i>
+              </div>
+              <div class="tpoffcanvas__contact-content-content">
+                <a href="tel:+18723340670"> +1 (872) 334-0670</a>
+              </div>
+            </div>
+          </div>
+          <div class="tpoffcanvas__social">
+            <a class="icon facebook" href="#"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a class="icon twitter" href="#"><i class="fab fa-twitter"></i></a>
+            <a class="icon youtube" href="#"><i class="fab fa-youtube"></i></a>
+            <a class="icon linkedin" href="#"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="body-overlay"></div>
+    <!-- tp-offcanvus-area-end -->
+    <!--  breadcrumb-area  start -->
+    <div class="wrapper-box p-relative">
+      <div
+        class="breadcrumb__bg breadcrumb__bg__overlay pt-130 pb-130"
+        data-background="assets/img/breadcrumb/breadcrumb-bg-1.jpg"
+      >
+        <div class="container">
+          <div class="row">
+            <div class="col-xxl-12">
+              <div class="breadcrumb__content p-relative z-index-1 text-center">
+                <div class="breadcrumb__list mb-10">
+                  <span><a href="index.html">WEST CONSULT </a></span>
+                  <span class="dvdr"> / </span>
+                  <span class="sub-page-black">Terms & Conditions</span>
+                </div>
+                <h3 class="breadcrumb__title mb-20">Terms & Conditions</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--  breadcrumb-area  end -->
+    <!-- error area start -->
+    <div class="error-page__area pt-120 pb-120">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <div class="error-page__inner text-center">
+              <div class="error-page__title-box">
+                <div class="error-page__title-img">
+                  <!-- <img src="assets/img/error/error-main-img.png" alt="" /> -->
+                </div>
+              </div>
+              <h3 class="error-page__tagline">Terms & Conditions Page</h3>
+
+              <div class="tp-error-btn-box pt-5">
+                <a class="tp-btn" href="index.html">BACK TO HOME</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- error area end -->
+    <!-- footer  area start -->
+    <div class="footer__area" data-background="assets/img/footer/img.jpg">
+      <div class="footer__top pt-120 pb-90">
+        <div class="container">
+          <div class="row">
+            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
+              <div class="footer__widget footer__widget-1 pb-30">
+                <div class="footer__logo">
+                  <div class="logo">
+                    <a href="index.html">
+                      <img src="assets/img/logo/logo.png" alt="" />
+                    </a>
+                  </div>
+                </div>
+                <div class="footer__widget-content">
+                  <div class="footer__widget-info">
+                    <p>
+                      Phasellus luctus nibh utfinibultricies. Nulla sit amet
+                      urna purus. Aenean vulputate libero nulla.
+                    </p>
+                    <div class="footer__social">
+                      <ul>
+                        <li>
+                          <a
+                            href="https://www.instagram.com/thewestconsult?igsh=NTJpNXZ1aHZwYzhq"
+                            ><i class="fa-brands fa-instagram"></i
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
+              <div class="footer__widget footer__widget-2 pb-30">
+                <h4 class="footer__widget-title footer__widget-title-2">
+                  Contact
+                </h4>
+                <div class="footer__contact-info tp-footer__icon-space">
+                  <ul>
+                    <li>
+                      <span>
+                        <i class="fa-sharp fa-solid fa-location-dot"></i>
+                      </span>
+                      <a
+                        href="https://www.google.com/maps/@41.6758525,-86.2531698,18.17z"
+                        target="_blank"
+                        >2390 NBW 2nd Ave, Miami FLT 33127, USA</a
+                      >
+                    </li>
+                    <li>
+                      <span>
+                        <i class="fa-sharp fa-solid fa-phone"></i>
+                      </span>
+                      <a href="tel:+806(000)8899">+1 305 677-4352</a>
+                    </li>
+                    <li>
+                      <span>
+                        <i class="fa-solid fa-clock"></i>
+                      </span>
+                      <a href="">Mon - Sat: 8:00 am - 6:00 pm Sunday: closed</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-xxl-3 col-lg-8 col-md-6 col-sm-6">
+              <div class="footer__widget footer__widget-2 pb-30">
+                <h4 class="footer__widget-title footer__widget-title-2">
+                  Useful Links
+                </h4>
+                <div class="footer__contact-info tp-footer__icon-space">
+                  <ul>
+                    <li>
+                      <a target="_blank" href="/terms-and-conditions.html"
+                        >Terms & Conditions</a
+                      >
+                    </li>
+                    <li>
+                      <a target="_blank" href="/privacy-policy.html"
+                        >Privacy Policy</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom grey-bg-2 pt-25 pb-25">
+        <div class="container">
+          <div class="footer__bottom-inner">
+            <div class="row">
+              <div class="col-xxl-12">
+                <div class="footer__copyright text-center">
+                  <p>© Copyright 2023, Insurez. All Rights Reserved</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- footer  area end -->
+    <!-- JS here -->
     <script src="assets/js/vendor/jquery.js"></script>
     <script src="assets/js/vendor/waypoints.js"></script>
     <script src="assets/js/bootstrap-bundle.js"></script>
