--- a/contact.html
+++ b/contact.html
@@ -305,8 +305,8 @@
                 <i class="fa-solid fa-envelope"></i>
               </div>
               <div class="tpoffcanvas__contact-content-content">
-                <a href="mailto:safety.westconsult@gmail.com">
-                  safety.westconsult@gmail.com
+                <a href="mailto:info@thewestconsult.com">
+                  info@thewestconsult.com
                 </a>
               </div>
             </div>
@@ -402,6 +402,10 @@
                         required=""
                       ></textarea>
                     </div>
+                    <div class="d-flex warning_container">
+                      <input type="radio" class="warning_box" id="checkbox-form" />
+                      <label for="checkbox-form" class="warning_white">By checking this box, you agree to receive TEXT messages from WEST Consult INC related to consulting at the phone number provided above. You may reply STOP to opt out at any time. For assistance, reply HELP at +1 (872) 334-0670. Messages and data rates may apply. Message frequency will vary. please review our <a class="privacy-policy" href="./privacy-policy.html">privacy policy</a> and <a class="privacy-policy" href="./terms-and-conditions.html">terms of service</a>.</label>
+                    </div>
 
                     <div class="contact__button">
                       <button class="tp-btn-3" type="submit">
@@ -443,7 +447,7 @@
                     <i class="flaticon-email"></i>
                   </div>
                   <div class="contact__info-text">
-                    <h4>safety.westconsult@gmail.com</h4>
+                    <h4>info@thewestconsult.com</h4>
                   </div>
                 </div>
                 <div class="contact__info-item d-flex align-items-start">
@@ -501,7 +505,7 @@
       <div class="footer__top pt-220 pb-90">
         <div class="container">
           <div class="row">
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
+            <div class="col-xxl-3 col-lg-3 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-1 pb-30">
                 <div class="footer__logo">
                   <div class="logo">
@@ -530,7 +534,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-6">
+            <div class="col-xxl-3 col-lg-3 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-2 pb-30">
                 <h4 class="footer__widget-title footer__widget-title-2">
                   Contact
@@ -566,7 +570,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xxl-3 col-lg-8 col-md-6 col-sm-6">
+            <div class="col-xxl-3 col-lg-3 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-2 pb-30">
                 <h4 class="footer__widget-title footer__widget-title-2">
                   Useful Links
