--- a/faqs.html
+++ b/faqs.html
@@ -780,7 +780,7 @@
           <div class="offset-xl-2 col-xl-8">
             <div class="message-one__form">
               <form
-                action="assets/inc/sendemail.php"
+              id="faq-form_id"
                 class="comment-one__form contact-form-validated"
                 novalidate="novalidate"
               >
@@ -817,6 +817,10 @@
                         placeholder="Write a message"
                       ></textarea>
                     </div>
+                    <div class="d-flex warning_container">
+                      <input type="radio" class="warning_box" id="checkbox-form" />
+                      <label for="checkbox-form" class="warning_black">By checking this box, you agree to receive TEXT messages from WEST Consult INC related to consulting at the phone number provided above. You may reply STOP to opt out at any time. For assistance, reply HELP at +1 (872) 334-0670. Messages and data rates may apply. Message frequency will vary. please review our <a class="privacy-policy" href="./privacy-policy.html">privacy policy</a> and <a class="privacy-policy" href="./terms-and-conditions.html">terms of service</a>.</label>
+                    </div>
                     <div class="comment-form__btn-box text-center">
                       <button class="tp-btn" type="submit">
                         SEND A MEASSAGE
@@ -836,7 +840,7 @@
       <div class="footer__top pt-120 pb-90">
         <div class="container">
           <div class="row">
-            <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
+            <div class="col-xxl-3 col-lg-3 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-1 pb-30">
                 <div class="footer__logo">
                   <div class="logo">
@@ -865,7 +869,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xxl-6 col-lg-8 col-md-6 col-sm-6">
+            <div class="col-xxl-3 col-lg-3 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-2 pb-30">
                 <h4 class="footer__widget-title footer__widget-title-2">
                   Contact
@@ -901,7 +905,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xxl-3 col-lg-8 col-md-6 col-sm-6">
+            <div class="col-xxl-3 col-lg-3 col-md-6 col-sm-6">
               <div class="footer__widget footer__widget-2 pb-30">
                 <h4 class="footer__widget-title footer__widget-title-2">
                   Useful Links
@@ -941,6 +945,7 @@
     </div>
     <!-- footer  area end -->
     <!-- JS here -->
+
     <script src="assets/js/vendor/jquery.js"></script>
     <script src="assets/js/vendor/waypoints.js"></script>
     <script src="assets/js/bootstrap-bundle.js"></script>
@@ -954,5 +959,6 @@
     <script src="assets/js/imagesloaded-pkgd.js"></script>
     <script src="assets/js/ajax-form.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/send_message_from_faq_page.js"></script>
   </body>
 </html>
